[package]
name = "ctp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/daedalus2022/ctp"
keywords = ["stock", "quantization", "futures", "ctp"]
categories = ["quantization"]
rust-version = "1.73.0"
readme = "README.md"
description = "ctp rust api"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
dashmap = "5" # 并发 HashMap
http = "1" # 我们使用 HTTP status code 所以引入这个类型库
prost = "0.12" # 处理 protobuf 的代码
thiserror = "1" # 错误定义和处理
tracing = "0.1" # 日志处理
ctp-sys = "0.1.3" # ctp sys binding

# [dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.4" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3" # 日志处理


[build-dependencies]
prost-build = "0.12" # 编译 protobuf
